# mqtt2db

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: changelog.yml  pre-commit-autoupdate.yml  pre-commit.yml  release.yml  unit-tests.yml  unittests.yml
example/: README.md  compose.yaml  config.yml  docker_compose.yml  mosquitto.conf
src/dashboard/: dash_app.py
src/mqtt2db/: config.py  database.py  mqtt.py  mqtt2db.py
src/mqtt2db/database/: database.py  mongo_db.py
tests/: database_test.py  import_test.py
tools/: publish_mqtt.py  read_mongo_db.py  subscribe_mqtt.py
